<?xml version="1.0"?>
<package format="3">
  <name>cuas_datalink</name>
  <version>0.2.0</version>
  <description>ROS 2 Humble C++ multi-node CUAS datalink package with NATS bridge support.</description>

  <maintainer email="bkkim@divinetech.kr">KIM ByoungKyu</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>px4_msgs</depend>
  <depend>cuas_msgs</depend>  

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
